--- a/finalProj/.classpath
+++ b/finalProj/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="rs2xml.jar"/>
 	<classpathentry kind="lib" path="mysql-connector-j-8.0.32/mysql-connector-j-8.0.32/mysql-connector-j-8.0.32.jar"/>
+	<classpathentry kind="lib" path="jfreechart-1.0.19/jfreechart-1.0.19/jfreechart-1.0.19-demo.jar"/>
+	<classpathentry kind="lib" path="jcommon.jar.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
