--- a/finalProj/.classpath
+++ b/finalProj/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="jfreechart-1.0.19/jfreechart-1.0.19/lib/orsonpdf-1.6-eval.jar"/>
 	<classpathentry kind="lib" path="jfreechart-1.0.19/jfreechart-1.0.19/lib/servlet.jar"/>
 	<classpathentry kind="lib" path="jfreechart-1.0.19/jfreechart-1.0.19/lib/swtgraphics2d.jar"/>
+	<classpathentry kind="lib" path="itext-1.4.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
